welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:5: error: ')' expected but 'while' found.
while (move(getY(),getDirection() == Direction.SOUTH && !estDosMur()){
^Program:9: error: ')' expected but '}' found.
}
^