welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
while (move(getY(),getDirection() == Direction.NORTH && !estFaceMur()){
  avance()
}
while (move(getY(),getDirection() == Direction.SOUTH && !estDosMur()){
  recule()
}